dashboard: Use rems for all spacing and fix skeleton layout shift

--- a/dashboard/src/components/DateRangePicker/DateRangePicker.scss
+++ b/dashboard/src/components/DateRangePicker/DateRangePicker.scss
@@ -30,8 +30,8 @@
     }
 
     &:focus {
-      outline: solid 2px var(--brand-focus);
-      outline-offset: 2px;
+      outline: solid 0.125rem var(--brand-focus);
+      outline-offset: 0.125rem;
       z-index: 1;
     }
 
