--- a/dashboard/src/components/TempCard/TempCard.scss
+++ b/dashboard/src/components/TempCard/TempCard.scss
@@ -4,7 +4,7 @@
   border-radius: 0.5rem;
   padding: 1.5rem 1.5rem 1rem 1.5rem;
   background-color: var(--brand-primary);
-  box-shadow: 0px 4px 16px -4px var(--brand-shadow);
+  box-shadow: 0px 0.25rem 1rem -0.25rem var(--brand-shadow);
   border-bottom: 1.5rem solid;
 
   &__title {
