--- a/dashboard/src/containers/Home/Home.scss
+++ b/dashboard/src/containers/Home/Home.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     gap: 2rem;
     background-color: var(--brand-primary);
-    box-shadow: 0px 4px 16px -4px var(--brand-shadow);
+    box-shadow: 0px 0.25rem 1rem -0.25rem var(--brand-shadow);
     border-radius: 0.5rem;
     padding: 2rem;
   }
